--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
-* {
-  padding: 0;
-  margin: 0;
-  font-family: "Oswald", sans-serif;
-}
-
 /* ======================= GLOBAL ======================= */
 body {
   background-color: white;
+  font-family: "Roboto", sans-serif;
 }
 
 a,
-p {
+p,
+h1,
+h2,
+h3 {
+  letter-spacing: 1px;
   color: #045d04;
+}
+
+h2 {
+  font-size: 200%;
 }
 
 /* ======================= NAVBAR ======================= */
@@ -22,12 +25,12 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 35px;
 }
 
@@ -39,7 +42,8 @@ nav img {
 
 nav a {
   text-decoration: none;
-  font-size: 125%;
+  font-size: 115%;
+  font-weight: 300;
 }
 
 nav a:hover {
@@ -48,8 +52,8 @@ nav a:hover {
 
 /* ======================= SECTION 1 ======================= */
 .section1 {
-  background-image: url(/assets/images/section1/84770f_1709ef8680b046ca97ee6ceeae28abe6_mv2_d_5615_3747_s_4_2.webp);
-  background-repeat: no-repeat;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(2, 0, 36, 0.2)), color-stop(35%, rgba(36, 121, 9, 0.15)), to(rgba(92, 135, 1, 0.15))), url(/assets/images/section1/84770f_1709ef8680b046ca97ee6ceeae28abe6_mv2_d_5615_3747_s_4_2.webp) no-repeat;
+  background: linear-gradient(90deg, rgba(2, 0, 36, 0.2) 0%, rgba(36, 121, 9, 0.15) 35%, rgba(92, 135, 1, 0.15) 100%), url(/assets/images/section1/84770f_1709ef8680b046ca97ee6ceeae28abe6_mv2_d_5615_3747_s_4_2.webp) no-repeat;
   background-size: cover;
   height: 900px;
   display: -webkit-box;
@@ -65,5 +69,38 @@ nav a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 50px;
+}
+
+.section1 h1,
+.section1 h2,
+.section1 h3 {
+  color: white;
+}
+
+.section1 h1 {
+  font-size: 800%;
+  font-weight: 400;
+}
+
+.section1 h3 {
+  font-size: 200%;
+  font-weight: 300;
+}
+
+.separation {
+  height: 3px;
+  width: 60%;
+  margin: 0 auto;
+  background-color: white;
+  content: "";
+}
+
+/* ======================= SECTION 2 ======================= */
+.section2-left {
+  background-image: url(/assets/images/section2/left/45d10e_051e0a16fe6142e8af623046a6338998_mv2_d_3926_4826_s_4_2.webp);
+  height: 800px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 /*# sourceMappingURL=style.css.map */
