--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 @import "./assets/mixins/mixins";
+@import "./assets/variables/variables";
 
 /* ======================= GLOBAL ======================= */
 
@@ -16,89 +17,93 @@ h3 {
   color: rgb(4, 93, 4);
 }
 
-h2 {
-  font-size: 200%;
+h1 {
+  font-size: 700%;
+  font-weight: 400;
 }
 
-// .row{
-//   padding: 0;
-//   margin: 0;
-// }
+h2 {
+  font-size: 220%;
+}
+
+h3 {
+  font-size: 200%;
+  font-weight: 300;
+}
+
+.row > * {
+  padding: 0;
+  margin: 0;
+}
 
 /* ======================= NAVBAR ======================= */
 
-nav {
-  position: relative;
-  height: 150px;
-  width: 100%;
-  display: flex;
-  @include flex-center;
-  gap: 35px;
+nav .row {
+  align-items: center;
+}
 
-  img {
-    position: absolute;
-    top: 10px;
-    left: 35px;
-  }
+.logo-nav img {
+  margin: 10px 0 30px 25px;
+}
 
-  a {
-    text-decoration: none;
-    font-size: 115%;
-    font-weight: 300;
+.menus-nav a {
+  margin-right: 30px;
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 110%;
 
-    &:hover {
-      color: black;
-    }
+  &:hover {
+    color: $hoverprim;
   }
 }
 
 /* ======================= SECTION 1 ======================= */
 
-.section1 {
+.section1-photo {
   background: linear-gradient(
       90deg,
       rgba(2, 0, 36, 0.2) 0%,
       rgba(36, 121, 9, 0.15) 35%,
       rgba(92, 135, 1, 0.15) 100%
     ),
-    url(/assets/images/section1/84770f_1709ef8680b046ca97ee6ceeae28abe6_mv2_d_5615_3747_s_4_2.webp)
-      no-repeat;
+    url(/assets/images/section1/section1-photo.jpg) no-repeat;
   background-size: cover;
-  height: 900px;
+  height: 100vh;
+  display: flex;
+  @include flex-center;
+}
+
+.section1-titres {
   display: flex;
   flex-flow: column;
-  @include flex-center;
   gap: 50px;
 
   h1,
   h2,
   h3 {
     color: white;
+    text-align: center;
   }
 
-  h1 {
-    font-size: 800%;
-    font-weight: 400;
-  }
-
-  h3 {
-    font-size: 200%;
-    font-weight: 300;
+  .separation {
+    height: 3px;
+    width: 60%;
+    margin: 0 auto;
+    background-color: white;
+    content: "";
   }
 }
-
-.separation {
-  height: 3px;
-  width: 60%;
-  margin: 0 auto;
-  background-color: white;
-  content: "";
-}
-
 /* ======================= SECTION 2 ======================= */
 
-.section2-left {
-  background-image: url(/assets/images/section2/left/45d10e_051e0a16fe6142e8af623046a6338998_mv2_d_3926_4826_s_4_2.webp);
-    height: 800px;
-    @include background;
+.section2 {
+  border: 1px solid red;
+  padding: 30px 80px;
 }
+
+.section2-photo {
+  display: block;
+  height: 90vh;
+  display: flex;
+  @include flex-center
+}
+
