--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ nav .row {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 0;
+  margin: 0;
 }
 
 .logo-nav img {
@@ -55,6 +57,11 @@ nav .row {
 }
 
 /* ======================= SECTION 1 ======================= */
+.section1 .row {
+  padding: 0;
+  margin: 0;
+}
+
 .section1-photo {
   background: -webkit-gradient(linear, left top, right top, from(rgba(2, 0, 36, 0.2)), color-stop(35%, rgba(36, 121, 9, 0.15)), to(rgba(92, 135, 1, 0.15))), url(/assets/images/section1/section1-photo.jpg) no-repeat;
   background: linear-gradient(90deg, rgba(2, 0, 36, 0.2) 0%, rgba(36, 121, 9, 0.15) 35%, rgba(92, 135, 1, 0.15) 100%), url(/assets/images/section1/section1-photo.jpg) no-repeat;
@@ -99,13 +106,11 @@ nav .row {
 
 /* ======================= SECTION 2 ======================= */
 .section2 {
-  border: 1px solid red;
-  padding: 30px 80px;
+  margin: 30px 150px;
 }
 
 .section2-photo {
-  display: block;
-  height: 90vh;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -115,5 +120,68 @@ nav .row {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.section2-titres {
+  text-align: center;
+  padding: 60px 20px;
+  background-color: white;
+}
+
+.section2-titres a {
+  text-decoration: none;
+  padding: 2px 10px;
+  border-bottom: 1px solid #045d04;
+}
+
+.section2-titres a:hover {
+  color: goldenrod;
+}
+
+.section2-middle {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 50%;
+  text-align: center;
+  gap: 50px;
+}
+
+.section2-middle .btn {
+  background-color: #045d04;
+  color: white;
+  padding: 15px 20px;
+  border-radius: 0;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.section2-middle .btn:hover {
+  color: goldenrod;
+  background-color: white;
+}
+
+.section2-middle .section2-logo-middle {
+  position: absolute;
+  right: -50px;
+  top: -110px;
+}
+
+.section2-middle p {
+  letter-spacing: 0;
+  line-height: 150%;
 }
 /*# sourceMappingURL=style.css.map */
