--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 /* ======================= GLOBAL ======================= */
 body {
   background-color: white;
@@ -9,6 +10,7 @@ p,
 h1,
 h2,
 h3,
+h4,
 h6 {
   letter-spacing: 1px;
   color: #045d04;
@@ -28,13 +30,16 @@ h3 {
   font-weight: 300;
 }
 
-p {
-  font-size: 110%;
+h4 {
+  font-size: 180%;
 }
 
-.row > * {
-  padding: 0;
-  margin: 0;
+h6 {
+  font-size: 80%;
+}
+
+p {
+  font-size: 110%;
 }
 
 /* ======================= NAVBAR ======================= */
@@ -42,12 +47,10 @@ nav .row {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0;
-  margin: 0;
 }
 
 .logo-nav img {
-  margin: 10px 0 30px 25px;
+  margin: 10px 0 30px 35px;
 }
 
 .menus-nav a {
@@ -62,11 +65,6 @@ nav .row {
 }
 
 /* ======================= SECTION 1 ======================= */
-.section1 .row {
-  padding: 0;
-  margin: 0;
-}
-
 .section1-photo {
   background: -webkit-gradient(linear, left top, right top, from(rgba(2, 0, 36, 0.2)), color-stop(35%, rgba(36, 121, 9, 0.15)), to(rgba(92, 135, 1, 0.15))), url(/assets/images/section1/section1-photo.jpg) no-repeat;
   background: linear-gradient(90deg, rgba(2, 0, 36, 0.2) 0%, rgba(36, 121, 9, 0.15) 35%, rgba(92, 135, 1, 0.15) 100%), url(/assets/images/section1/section1-photo.jpg) no-repeat;
@@ -111,7 +109,12 @@ nav .row {
 
 /* ======================= SECTION 2 ======================= */
 .section2 {
-  margin: 30px 150px;
+  margin: 30px 100px;
+}
+
+.section2 .section2-content {
+  padding: 0;
+  margin: 0;
 }
 
 .section2-photo {
@@ -223,6 +226,40 @@ nav .row {
   margin: 40px 0;
   word-spacing: 20px;
   font-size: 150%;
+  color: #045d04;
+}
+
+/* ======================= SECTION 4 ======================= */
+.section4,
+footer {
+  padding: 20px;
+}
+
+.section4-photos,
+.footer-content {
+  padding: 35px;
+}
+
+.section4-photos img,
+.footer-content img {
+  width: 100%;
+}
+
+/* ======================= FOOTER ======================= */
+.footer-content {
+  padding: 100px 100px 0 100px;
+}
+
+.footer-content h4, .footer-content .social {
+  margin-bottom: 40px;
+}
+
+.social a {
+  color: black;
+  padding-right: 15px;
+}
+
+.social a:hover {
   color: #045d04;
 }
 /*# sourceMappingURL=style.css.map */
