--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
 }
 
 h2 {
-  font-size: 220%;
+  font-size: 250%;
 }
 
 h3 {
@@ -42,6 +42,9 @@ p {
   font-size: 110%;
 }
 
+/* ========================================================================================
+========================================= ACCUEIL =========================================
+=========================================================================================== */
 /* ======================= NAVBAR ======================= */
 nav .row {
   -webkit-box-align: center;
@@ -61,14 +64,11 @@ nav .row {
 }
 
 .menus-nav a:hover {
-  color: goldenrod;
+  color: #ffb52d;
 }
 
-/* ======================= SECTION 1 ======================= */
-.section1-photo {
-  background: -webkit-gradient(linear, left top, right top, from(rgba(2, 0, 36, 0.2)), color-stop(35%, rgba(36, 121, 9, 0.15)), to(rgba(92, 135, 1, 0.15))), url(/assets/images/section1/section1-photo.jpg) no-repeat;
-  background: linear-gradient(90deg, rgba(2, 0, 36, 0.2) 0%, rgba(36, 121, 9, 0.15) 35%, rgba(92, 135, 1, 0.15) 100%), url(/assets/images/section1/section1-photo.jpg) no-repeat;
-  background-size: cover;
+/* ======================= SECTION 1-0 ======================= */
+.section1-0-photo {
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -79,9 +79,11 @@ nav .row {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.section1-titres {
+.section1-0-titres {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -92,14 +94,14 @@ nav .row {
   gap: 50px;
 }
 
-.section1-titres h1,
-.section1-titres h2,
-.section1-titres h3 {
+.section1-0-titres h1,
+.section1-0-titres h2,
+.section1-0-titres h3 {
   color: white;
   text-align: center;
 }
 
-.section1-titres .separation {
+.section1-0-titres .separation {
   height: 3px;
   width: 60%;
   margin: 0 auto;
@@ -107,17 +109,18 @@ nav .row {
   content: "";
 }
 
-/* ======================= SECTION 2 ======================= */
-.section2 {
+/* ======================= SECTION 1-1 ======================= */
+.section1-1 {
   margin: 30px 100px;
 }
 
-.section2 .section2-content {
+.section1-1 .section1-1-content {
   padding: 0;
   margin: 0;
 }
 
-.section2-photo {
+.section1-1-photo {
+  background-color: #ffb52d;
   height: 90vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -132,23 +135,23 @@ nav .row {
   background-size: cover;
 }
 
-.section2-titres {
+.section1-1-titres {
   text-align: center;
   padding: 60px 20px;
   background-color: white;
 }
 
-.section2-titres a {
+.section1-1-titres a {
   text-decoration: none;
   padding: 2px 10px;
   border-bottom: 1px solid #045d04;
 }
 
-.section2-titres a:hover {
-  color: goldenrod;
+.section1-1-titres a:hover {
+  color: #ffb52d;
 }
 
-.section2-middle {
+.section1-1-middle {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -168,7 +171,7 @@ nav .row {
   gap: 50px;
 }
 
-.section2-middle .btn {
+.section1-1-middle .btn {
   background-color: #045d04;
   color: white;
   padding: 15px 20px;
@@ -177,29 +180,29 @@ nav .row {
   transition: all 1s;
 }
 
-.section2-middle .btn:hover {
-  color: goldenrod;
+.section1-1-middle .btn:hover {
+  color: #ffb52d;
   background-color: white;
 }
 
-.section2-middle .section2-logo-middle {
+.section1-1-middle .section1-1-logo-middle {
   position: absolute;
   right: -50px;
   top: -110px;
 }
 
-.section2-middle p {
+.section1-1-middle p {
   letter-spacing: 0;
   line-height: 180%;
 }
 
-/* ======================= SECTION 3 ======================= */
-.section3 {
+/* ======================= SECTION 1-2 ======================= */
+.section1-2 {
   margin: 30px 150px;
   text-align: center;
 }
 
-.section3-content {
+.section1-2-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -218,29 +221,29 @@ nav .row {
   padding-bottom: 20px;
 }
 
-.section3-content p {
+.section1-2-content p {
   width: 50%;
 }
 
-.section3-content .separation2 {
+.section1-2-content .separation2 {
   margin: 40px 0;
   word-spacing: 20px;
   font-size: 150%;
   color: #045d04;
 }
 
-/* ======================= SECTION 4 ======================= */
-.section4,
+/* ======================= SECTION 1-3 ======================= */
+.section1-3,
 footer {
   padding: 20px;
 }
 
-.section4-photos,
+.section1-3-photos,
 .footer-content {
   padding: 35px;
 }
 
-.section4-photos img,
+.section1-3-photos img,
 .footer-content img {
   width: 100%;
 }
@@ -250,7 +253,8 @@ footer {
   padding: 100px 100px 0 100px;
 }
 
-.footer-content h4, .footer-content .social {
+.footer-content h4,
+.footer-content .social {
   margin-bottom: 40px;
 }
 
@@ -261,5 +265,41 @@ footer {
 
 .social a:hover {
   color: #045d04;
+}
+
+/* ================================================================================================
+========================================= ABOUT TTHE FARM =========================================
+================================================================================================ */
+.section2-0 {
+  margin: 55px;
+}
+
+.section2-0 .section2-0-content {
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  gap: 25px;
+}
+
+.section2-0 p {
+  margin-top: 50px;
+  width: 70%;
+}
+
+.section2-0 img {
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
