--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ h1 {
 }
 
 h2 {
-  font-size: 220%;
+  font-size: 250%;
 }
 
 h3 {
@@ -45,6 +45,10 @@ h6 {
 p {
   font-size: 110%;
 }
+
+/* ========================================================================================
+========================================= ACCUEIL =========================================
+=========================================================================================== */
 
 /* ======================= NAVBAR ======================= */
 
@@ -67,23 +71,16 @@ nav .row {
   }
 }
 
-/* ======================= SECTION 1 ======================= */
+/* ======================= SECTION 1-0 ======================= */
 
-.section1-photo {
-  background: linear-gradient(
-      90deg,
-      rgba(2, 0, 36, 0.2) 0%,
-      rgba(36, 121, 9, 0.15) 35%,
-      rgba(92, 135, 1, 0.15) 100%
-    ),
-    url(/assets/images/section1/section1-photo.jpg) no-repeat;
-  background-size: cover;
+.section1-0-photo {
   height: 100vh;
   display: flex;
   @include flex-center;
+  @include background;
 }
 
-.section1-titres {
+.section1-0-titres {
   display: flex;
   flex-flow: column;
   gap: 50px;
@@ -104,24 +101,25 @@ nav .row {
   }
 }
 
-/* ======================= SECTION 2 ======================= */
+/* ======================= SECTION 1-1 ======================= */
 
-.section2 {
+.section1-1 {
   margin: 30px 100px;
 
-  .section2-content {
+  .section1-1-content {
     @include no-spaces;
   }
 }
 
-.section2-photo {
+.section1-1-photo {
+  background-color: $colorbackground;
   height: 90vh;
   display: flex;
   @include flex-center;
   @include background;
 }
 
-.section2-titres {
+.section1-1-titres {
   text-align: center;
   padding: 60px 20px;
   background-color: white;
@@ -137,7 +135,7 @@ nav .row {
   }
 }
 
-.section2-middle {
+.section1-1-middle {
   position: relative;
   display: flex;
   flex-flow: column;
@@ -159,7 +157,7 @@ nav .row {
     }
   }
 
-  .section2-logo-middle {
+  .section1-1-logo-middle {
     position: absolute;
     right: -50px;
     top: -110px;
@@ -171,14 +169,14 @@ nav .row {
   }
 }
 
-/* ======================= SECTION 3 ======================= */
+/* ======================= SECTION 1-2 ======================= */
 
-.section3 {
+.section1-2 {
   margin: 30px 150px;
   text-align: center;
 }
 
-.section3-content {
+.section1-2-content {
   display: flex;
   flex-flow: column;
   @include flex-center;
@@ -198,14 +196,14 @@ nav .row {
   }
 }
 
-/* ======================= SECTION 4 ======================= */
+/* ======================= SECTION 1-3 ======================= */
 
-.section4,
+.section1-3,
 footer {
   padding: 20px;
 }
 
-.section4-photos,
+.section1-3-photos,
 .footer-content {
   padding: 35px;
 
@@ -219,16 +217,43 @@ footer {
 .footer-content {
   padding: 100px 100px 0 100px;
 
-  h4, .social {
+  h4,
+  .social {
     margin-bottom: 40px;
   }
 }
 
-.social a{
+.social a {
   color: black;
   padding-right: 15px;
 
-  &:hover{
-    color:$colorprim;
+  &:hover {
+    color: $colorprim;
+  }
+}
+
+/* ================================================================================================
+========================================= ABOUT TTHE FARM =========================================
+================================================================================================ */
+
+.section2-0 {
+  margin: 55px;
+
+  .section2-0-content {
+    @include no-spaces;
+    display: flex;
+    flex-flow: column;
+    @include flex-center;
+    text-align: center;
+    gap: 25px;
+  }
+
+  p {
+    margin-top: 50px;
+    width: 70%;
+  }
+
+  img{
+    width: 100%;
   }
 }
