--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ nav .row {
 .section1-1-middle .btn {
   background-color: #045d04;
   color: white;
-  padding: 15px 20px;
+  padding: 15px 30px;
   border-radius: 0;
   -webkit-transition: all 1s;
   transition: all 1s;
@@ -270,6 +270,7 @@ footer {
 /* ================================================================================================
 ========================================= ABOUT TTHE FARM =========================================
 ================================================================================================ */
+/* ======================= SECTION 2-0 ======================= */
 .section2-0 {
   margin: 55px;
 }
@@ -300,6 +301,88 @@ footer {
 }
 
 .section2-0 img {
+  width: 100%;
+}
+
+/* ======================= SECTION 2-1 ======================= */
+.section2-1-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+  text-align: center;
+}
+
+.section2-1-content h2 {
+  margin-bottom: 40px;
+}
+
+.section2-1-content a {
+  margin-top: 40px;
+}
+
+.section2-1-content p {
+  line-height: 180%;
+}
+
+.section2-1-content .btn {
+  background-color: white;
+  border: 2px solid #045d04;
+  color: #045d04;
+  padding: 15px 40px;
+  border-radius: 0;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.section2-1-content .btn:hover {
+  color: white;
+  background-color: #045d04;
+}
+
+/* ======================= SECTION 2-2 ======================= */
+.section2-2 {
+  margin: 80px 55px;
+}
+
+.section2-2 .section2-2-content {
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  gap: 25px;
+}
+
+.section2-2 p,
+.section2-2 h2 {
+  margin-top: 50px;
+  width: 70%;
+  line-height: 180%;
+}
+
+.section2-2 img {
   width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
