--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,7 @@ h1,
 h2,
 h3,
 h4,
+h5,
 h6 {
   letter-spacing: 1px;
   color: $colorprim;
@@ -36,6 +37,10 @@ h3 {
 
 h4 {
   font-size: 180%;
+}
+
+h5 {
+  font-weight: 300;
 }
 
 h6 {
@@ -303,3 +308,41 @@ footer {
   }
 }
 
+/* ==============================================================================================
+========================================= SHOP PRODUCTS =========================================
+============================================================================================== */
+
+/* ======================= SECTION 3-0 ======================= */
+
+.section3-0 .row {
+  margin-bottom: 80px;
+
+  .row > * {
+    padding: 0 30px;
+  }
+}
+
+.section3-0-titre {
+  text-align: center;
+  margin: 80px 0;
+
+  h5 {
+    margin: 30px 0;
+  }
+}
+
+.section3-0-content {
+  text-align: center;
+
+  img {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+}
+
+.section3-0-weight {
+  position: absolute;
+  background-color: green;
+  padding: 5px 8px;
+  color: white;
+}
