--- a/assets/variables/_variables.scss
+++ b/assets/variables/_variables.scss
@@ -1,3 +1,2 @@
-$colorprim : rgb(4, 93, 4);
-$hoverprim : rgb(255, 181, 45);
-$colorbackground : rgb(255, 181, 45);
+$colorprim: #325b5b;
+$colorsec: #ffb84e;
