--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h4,
 h5,
 h6 {
   letter-spacing: 1px;
-  color: #045d04;
+  color: #325b5b;
 }
 
 h1 {
@@ -69,7 +69,7 @@ nav .row {
 }
 
 .menus-nav a:hover {
-  color: #ffb52d;
+  color: #ffb84e;
 }
 
 /* ======================= SECTION 1-0 ======================= */
@@ -125,7 +125,7 @@ nav .row {
 }
 
 .section1-1-photo {
-  background-color: #ffb52d;
+  background-color: #ffb84e;
   height: 90vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -149,11 +149,11 @@ nav .row {
 .section1-1-titres a {
   text-decoration: none;
   padding: 2px 10px;
-  border-bottom: 1px solid #045d04;
+  border-bottom: 1px solid #325b5b;
 }
 
 .section1-1-titres a:hover {
-  color: #ffb52d;
+  color: #ffb84e;
 }
 
 .section1-1-middle {
@@ -177,7 +177,7 @@ nav .row {
 }
 
 .section1-1-middle .btn {
-  background-color: #045d04;
+  background-color: #325b5b;
   color: white;
   padding: 15px 30px;
   border-radius: 0;
@@ -186,7 +186,7 @@ nav .row {
 }
 
 .section1-1-middle .btn:hover {
-  color: #ffb52d;
+  color: #ffb84e;
   background-color: white;
 }
 
@@ -234,7 +234,7 @@ nav .row {
   margin: 40px 0;
   word-spacing: 20px;
   font-size: 150%;
-  color: #045d04;
+  color: #325b5b;
 }
 
 /* ======================= SECTION 1-3 ======================= */
@@ -269,7 +269,7 @@ footer {
 }
 
 .social a:hover {
-  color: #045d04;
+  color: #325b5b;
 }
 
 /* ================================================================================================
@@ -281,6 +281,7 @@ footer {
 }
 
 .section2-0 .section2-0-content {
+  background: #ffb84e;
   padding: 0;
   margin: 0;
   display: -webkit-box;
@@ -342,8 +343,8 @@ footer {
 
 .section2-1-content .btn {
   background-color: white;
-  border: 2px solid #045d04;
-  color: #045d04;
+  border: 2px solid #325b5b;
+  color: #325b5b;
   padding: 15px 40px;
   border-radius: 0;
   -webkit-transition: all 1s;
@@ -352,7 +353,7 @@ footer {
 
 .section2-1-content .btn:hover {
   color: white;
-  background-color: #045d04;
+  background-color: #325b5b;
 }
 
 /* ======================= SECTION 2-2 ======================= */
@@ -433,16 +434,13 @@ footer {
 ==================================================================================== */
 /* ======================= SECTION 4-0 ======================= */
 .section4-0 {
-  margin: 100px 55px;
-}
-
-.section4-0 .row > * {
-  padding: 0;
+  margin: 55px;
 }
 
 .section4-0-content {
-  height: 100%;
-  background-color: #045d04;
+  background: #325b5b;
+  padding: 0;
+  margin: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -456,7 +454,7 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 20px;
+  gap: 30px;
 }
 
 .section4-0-content h2,
@@ -464,25 +462,27 @@ footer {
   color: white;
 }
 
+.section4-0-content img {
+  width: 100%;
+}
+
 .section4-0-content select {
-  width: 50%;
+  width: 45%;
   padding: 5px 0;
   border: 0;
-  background-color: #045d04;
+  background: none;
   color: white;
+}
+
+.section4-0-content select option {
+  color: black;
 }
 
 .section4-0-content .separation3 {
   height: 1px;
-  width: 50%;
+  width: 45%;
   margin: 0 auto;
   background-color: rgba(255, 255, 255, 0.4);
   content: "";
-}
-
-.section4-0-photo img {
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
