--- a/style.scss
+++ b/style.scss
@@ -358,6 +358,10 @@ footer {
   margin: 55px;
 }
 
+.accordion{
+  width: 50%;
+}
+
 .section4-0-content {
   background: $colorprim;
   @include no-spaces;
@@ -375,24 +379,5 @@ footer {
     width: 100%;
   }
 
-  select {
-    width: 45%;
-    padding: 5px 0;
-    border: 0;
-    background: none;
-    color: white;
-
-    option {
-      color: black;
-    }
-  }
-
-  .separation3 {
-    height: 1px;
-    width: 45%;
-    margin: 0 auto;
-    background-color: rgba(255, 255, 255, 0.4);
-    content: "";
-  }
 }
 
