--- a/style.css
+++ b/style.css
@@ -469,4 +469,28 @@ footer {
 .section4-0-content img {
   width: 100%;
 }
+
+.accordion .accordion-item {
+  margin: 20px 0;
+  border: 0;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.4);
+  border-radius: 0;
+  background: #325b5b;
+}
+
+.accordion .accordion-item .accordion-button {
+  background: #325b5b;
+  border-radius: 0;
+  color: white;
+  padding: 1rem 0;
+  gap: 15px;
+}
+
+.accordion .accordion-item .accordion-button::after {
+  background-image: url(/assets/images/faq/icons8-chevron-bas-24.png);
+}
+
+.accordion .accordion-item .accordion-body {
+  background-color: white;
+}
 /*# sourceMappingURL=style.css.map */
