--- a/style.css
+++ b/style.css
@@ -528,34 +528,60 @@ footer {
 }
 
 .section5-0-formulaire {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  padding: 30px 0;
 }
 
-.section5-0-formulaire .section5-0-phone {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 30px;
+.section5-0-formulaire label {
+  width: 100%;
+  text-align: left;
 }
 
-.section5-0-formulaire .separation3 {
-  height: 50px;
-  width: 3px;
-  background: #325b5b;
+.section5-0-formulaire .form-label {
+  color: #325b5b;
+}
+
+.section5-0-formulaire .form-control {
+  border: 0;
+  border-radius: 0;
+  background: none;
+  border-bottom: 2px solid #325b5b;
+}
+
+.section5-0-formulaire .btn {
+  margin-top: 50px;
+  background-color: #325b5b;
+  color: white;
+  padding: 15px 30px;
+  border-radius: 0;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.section5-0-formulaire .btn:hover {
+  color: #ffb84e;
+  background-color: white;
+}
+
+.section5-0-form-titre {
+  margin-bottom: 80px;
+  text-align: center;
+}
+
+.section5-0-form-titre h2 {
+  margin: 35px 0;
+}
+
+.section5-0-form-titre .left {
+  border-right: 1px solid #325b5b;
+  padding: 15px 0 10px;
+}
+
+.section5-0-form-titre .right {
+  border-left: 1px solid #325b5b;
+  padding: 15px 0 10px;
+}
+
+.section5-0-email {
+  margin: 50px 0;
 }
 /*# sourceMappingURL=style.css.map */
