--- a/style.scss
+++ b/style.scss
@@ -429,21 +429,50 @@ footer {
   }
 }
 
-.section5-0-formulaire{
+.section5-0-formulaire {
+  padding: 30px 0;
 
-  display: flex;
-  flex-flow: column;
-  @include flex-center;
-
-  .section5-0-phone{
-    display: flex;
-    align-items: center;
-    gap: 30px;
+  label {
+    width: 100%;
+    text-align: left;
   }
 
-  .separation3{
-    height: 50px;
-    width: 3px;
-    background: $colorprim;
+  .form-label {
+    color: $colorprim;
   }
+
+  .form-control {
+    border: 0;
+    border-radius: 0;
+    background: none;
+    border-bottom: 2px solid $colorprim;
+  }
+
+  .btn {
+    margin-top: 50px;
+    @include green-button;
+  }
+}
+
+.section5-0-form-titre {
+  margin-bottom: 80px;
+  text-align: center;
+
+  h2 {
+    margin: 35px 0;
+  }
+
+  .left {
+    border-right: 1px solid $colorprim;
+    padding: 15px 0 10px;
+  }
+
+  .right {
+    border-left: 1px solid $colorprim;
+    padding: 15px 0 10px;
+  }
+}
+
+.section5-0-email {
+  margin: 50px 0;
 }
