--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body {
   background-color: white;
   font-family: "Roboto", sans-serif;
+  width: 100%;
 }
 
 a,
@@ -562,26 +563,49 @@ footer {
   background-color: white;
 }
 
-.section5-0-form-titre {
-  margin-bottom: 80px;
+.section5-0-formulaire .g-3 {
+  gap: 50px;
+}
+
+.section5-0-form-titre .row {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
+  gap: 15px;
+  margin: 30px 0;
 }
 
-.section5-0-form-titre h2 {
-  margin: 35px 0;
-}
-
-.section5-0-form-titre .left {
-  border-right: 1px solid #325b5b;
-  padding: 15px 0 10px;
-}
-
-.section5-0-form-titre .right {
-  border-left: 1px solid #325b5b;
-  padding: 15px 0 10px;
+.section5-0-form-titre .row .section5-middle {
+  width: 1px;
+  height: 80px;
+  border-right: 2px solid #325b5b;
+  content: " ";
 }
 
 .section5-0-email {
   margin: 50px 0;
+}
+
+/* ======================= SECTION 5-1 ======================= */
+.section5-1 .row {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  margin: 30px 0;
+}
+
+.section5-1 .row .section5-middle {
+  width: 1px;
+  height: 80px;
+  border-right: 2px solid #325b5b;
+  content: " ";
 }
 /*# sourceMappingURL=style.css.map */
