--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 body {
   background-color: white;
   font-family: "Roboto", sans-serif;
+  width: 100%;
 }
 
 a,
@@ -452,27 +453,41 @@ footer {
     margin-top: 50px;
     @include green-button;
   }
+
+  .g-3 {
+    gap: 50px;
+  }
 }
 
-.section5-0-form-titre {
-  margin-bottom: 80px;
+.section5-0-form-titre .row {
+  @include flex-center;
   text-align: center;
+  gap: 15px;
+  margin: 30px 0;
 
-  h2 {
-    margin: 35px 0;
-  }
-
-  .left {
-    border-right: 1px solid $colorprim;
-    padding: 15px 0 10px;
-  }
-
-  .right {
-    border-left: 1px solid $colorprim;
-    padding: 15px 0 10px;
+  .section5-middle {
+    width: 1px;
+    height: 80px;
+    border-right: 2px solid $colorprim;
+    content: " ";
   }
 }
 
 .section5-0-email {
   margin: 50px 0;
+}
+
+/* ======================= SECTION 5-1 ======================= */
+
+.section5-1 .row {
+  @include flex-center;
+  text-align: center;
+  margin: 30px 0;
+
+  .section5-middle {
+    width: 1px;
+    height: 80px;
+    border-right: 2px solid $colorprim;
+    content: " ";
+  }
 }
