--- a/style.scss
+++ b/style.scss
@@ -432,6 +432,7 @@ footer {
 
 .section5-0-formulaire {
   padding: 30px 0;
+  width: 80%;
 
   label {
     width: 100%;
@@ -479,6 +480,10 @@ footer {
 
 /* ======================= SECTION 5-1 ======================= */
 
+.section5-1 {
+  margin: 200px 0;
+}
+
 .section5-1 .row {
   @include flex-center;
   text-align: center;
@@ -490,4 +495,10 @@ footer {
     border-right: 2px solid $colorprim;
     content: " ";
   }
+}
+
+/* ======================= SECTION 5-2 ======================= */
+
+.section5-2 img {
+  width: 100%;
 }
